slice tests